--- a/BarakaTop.Service/BarakaTop.Service.csproj
+++ b/BarakaTop.Service/BarakaTop.Service.csproj
@@ -6,4 +6,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BarakaTop.Domain\BarakaTop.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
